# AgroPi

./: .gitignore  AGENTS.md  README.md
backend/: README.md  docker-compose.yml  pyproject.toml
backend/configs/: sources.yaml
backend/libs/news_core/: __init__.py  config.py  messages.py  models.py  observability.py  registry.py  storage.py
backend/libs/ranking_lib/: __init__.py  scoring.py  slates.py
backend/libs/vector_utils/: __init__.py  embedding.py  hashing.py  metrics.py
backend/services/admin_console/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
backend/services/admin_console/app/: globals.css  layout.tsx  page.tsx
backend/services/admin_console/components/: PipelineStatus.tsx  SourceTable.tsx
backend/services/admin_console/config/: service.yaml
backend/services/admin_console/lib/: api.ts
backend/services/admin_console/tests/: api.test.ts
backend/services/api_gateway/app/: __init__.py  main.py  schema.py  service.py
backend/services/api_gateway/config/: service.yaml
backend/services/api_gateway/tests/: test_service.py
backend/services/clusterer/app/: __init__.py  main.py  schemas.py  service.py
backend/services/clusterer/config/: service.yaml
backend/services/clusterer/tests/: test_clusterer.py
backend/services/deduper/app/: __init__.py  main.py  service.py
backend/services/deduper/config/: service.yaml
backend/services/deduper/tests/: test_deduper.py
backend/services/embeddings/: Dockerfile
backend/services/embeddings/app/: main.py  schemas.py  service.py
backend/services/embeddings/config/: service.yaml
backend/services/embeddings/tests/: test_embeddings.py
backend/services/fetcher/: Dockerfile
backend/services/fetcher/app/: __init__.py  main.py  service.py
(+410 files in other folders)
